--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <!-- Header element is added in place of a div with class header as it is a sematic element which is prefered tag for SEO -->
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
@@ -24,8 +25,9 @@
             </ul>
         </nav>
     </header>
+    <!-- Placing the image directly, doesnt make sense to have a section devoted soley to an image, and a div with class named hero does not help to describe its purpose -->
     <img class="background-image" src="./assets/images/digital-marketing-meeting.jpg" alt="Office meeting between a work team">
-    <section class="content">
+    <article class="content">
         <article id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Contains a picture of a notebook with all parts of a properly search engine optimization website"/>
             <h2>Search Engine Optimization</h2>
@@ -47,7 +49,7 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </article>
-    </section>
+    </article>
     <aside>
         <section>
             <h3>Lead Generation</h3>
