changing the image from a section to a figure. updated the readme file to the professional project readme file instead of the challenge description readme file.

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             </ul>
         </nav>
     </header>
-    <!-- I originally wanted to just put the image here but thought it would be better to have a section as that is what the lesson I feel is teaching-->
-    <section class="background-image"  alt="Office meeting between a work team"></section>
+    <!-- After rereading the site while doing the readme I found a tag I had glossed over before, figure which fits perfectly for this spot-->
+    <figure class="background-image"  alt="Office meeting between a work team"></figure>
     <!-- This area I am putting to an article of articles because that is what the w3 school samentic elements looks like but i feel that is just an idea and there is no "rule" based on the section about nested section verse articles-->
     <article class="content">
         <article id="search-engine-optimization">
